--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,5 @@
+NODE_ENV=
+
 PORT=
 
 DB_HOST=
@@ -11,3 +13,5 @@ JWT_EXPIRES_IN=
 
 ADMIN_USER_EMAIL=
 ADMIN_USER_PASSWORD=
+
+ACCESS_CONTROL_ALLOW_ORIGINS=
